--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker pull yglukhov/nim-base
+  - docker pull yglukhov/debian-stretch.base.nim
 script:
-  - docker run -v "$(pwd):/project" -w /project yglukhov/nim-base nim --version
-  - docker run -v "$(pwd):/project" -w /project yglukhov/nim-base nimble tests
+  - docker run -v "$(pwd):/project" -w /project yglukhov/debian-stretch.base.nim nim --version
+  - docker run -v "$(pwd):/project" -w /project yglukhov/debian-stretch.base.nim nimble test
